fix browse not not centered

--- a/public/css/browse_style.css
+++ b/public/css/browse_style.css
@@ -25,15 +25,17 @@ html {
 
 
 #browse-container {
-  min-width: 250px;
-  max-width: fit-content;
-  /* width: 600px; */
+  display: flex;
+  flex-grow: 1;
+  max-width: 700px;
+  flex-direction: column;
+  height: fit-content;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #FFFFFF;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
 }
-
 
 .with-results {
   margin-left: auto;
@@ -44,10 +46,6 @@ html {
 }
 
 .without-results {
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 70px 40px;
 }
 
@@ -68,7 +66,7 @@ html {
 #browse-container select {
     padding: 10px;
     font-size: 16px;
-    width: 600px; /* Ajusta el tamaño según sea necesario */
+    width: 100%;
 }
 
 #browse-container button {
@@ -88,11 +86,6 @@ html {
   margin-top: 30px;
   margin-bottom: 15px;
 }
-
-/* #browse-container p {
-    font-size: 18px;
-    
-} */
 
 .search-options {
     display: flex;
@@ -125,9 +118,3 @@ html {
     background-color: #007BFF;
     color: white;
 }
-
-/* Modifica el largo del dropdown */
-.select2-container--default .select2-results > .select2-results__options {
-  max-height: 300px;
-  overflow-y: auto;
-  }
